--- a/Views/Authentication/Login.cshtml
+++ b/Views/Authentication/Login.cshtml
@@ -1,22 +1,25 @@
 ﻿@{
     ViewData["Title"] = "Login";
+    Layout = "_Layout";
 }
 
-<h2>Login</h2>
+<div class="login-box">
+    <h2>Login to XenoByte</h2>
 
-@if (ViewBag.Error != null)
-{
-    <div style="color:red">@ViewBag.Error</div>
-}
+    @if (ViewBag.Error != null)
+    {
+        <div class="alert alert-danger text-center">@ViewBag.Error</div>
+    }
 
-<form method="post">
-    <label>Email:</label>
-    <input type="text" name="email" required />
-    <br /><br />
-
-    <label>Password:</label>
-    <input type="password" name="password" required />
-    <br /><br />
-
-    <button type="submit">Login</button>
-</form>
+    <form method="post">
+        <div class="mb-3">
+            <input type="text" name="email" class="form-control" placeholder="Email" required />
+        </div>
+        <div class="mb-3">
+            <input type="password" name="password" class="form-control" placeholder="Password" required />
+        </div>
+        <button type="submit" class="btn btn-login">Login</button>
+    </form>
+    <a asp-action="SignUp" class="btn btn-login mt-3">SignUp</a>
+    <p id="typewriter"></p>
+</div>
