--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,6 +13,9 @@
             <option value="2">Trace Cryptocurrency Address or Transaction</option>
             @if (User.Identity.IsAuthenticated)
             {
+                <option value="3">Perform Bitcoin Transaction Hash Analysis</option>
+                <option value="4">Perform Bitcoin Wallet Forensic Analysis</option>
+                <option value="5">Check Bitcoin Wallet Reputationv</option>
                 
             }
         </select>
