--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -47,7 +47,7 @@
 
     <!-- Footer Section -->
     <footer class="xeno-footer">
-        <p>&copy; 2025 XenoByte. All rights reserved. | Designed for <a href="#">Graduation Project</a></p>
+        <p>&copy; 2025 XenoByte. All rights reserved.</p>
     </footer>
 
     <!-- Modal Structure -->
