--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
+@using XenoByte.Models.API
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
