--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
 @using XenoByte.Models.API
+@using XenoByte.Models.API.Ethereum
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
