--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 <option value="">Ethereum Scan</option>
                 <option value="7">Perform Ethereum Transaction Hash Analysis</option>
                 <option value="9">Perform Ethereum Wallet Forensic Analysis</option>
-                <option value="10">Check Ethereum Wallet ReputationReputation</option>
+                <option value="10">Check Ethereum Wallet Reputation</option>
             </select>
         }
     </div>
